# Fractal-Syntax-30XX

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  ConsoleIX.cpp  ConsoleIX.vcxproj  ConsoleIX.vcxproj.filters  Helpers.h  README.md  Signature.cpp  Signature.h  mem.cpp  mem.h  proc.cpp  proc.h
.github/workflows/: windows-build.yml
docs/: REVIEW_NOTES.md
include/imgui/: imgui_tables.cpp
lib/: glfw3.lib
scripts/ci/: validate_offsets.py
